--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 astroid==2.3.2
+certifi==2019.9.11
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.2.7
+django-extensions==2.2.5
+gunicorn==19.9.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+pipenv==2018.11.26
+psycopg2==2.8.4
 pylint==2.4.3
 python-decouple==3.1
 pytz==2019.3
 six==1.12.0
 sqlparse==0.3.0
 static3==0.7.0
+virtualenv==16.7.8
+virtualenv-clone==0.5.3
 wrapt==1.11.2
-gunicorn==19.9.0
-psycopg2==2.8.4
