--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.2.7
 django-extensions==2.2.5
+django-test-without-migrations==0.6
 gunicorn==19.9.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
